crates/sui-adapter-transactional-tests/tests/programmable/private_entry_value_restriction_by_ref_input_valid.exp
processed 5 tasks

init:
A: object(0,0)

task 1 'publish'. lines 9-25:
Error: warning[W09001]: unused alias
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/.tmptAXjrl:14:19
   │
14 │     use sui::bfc::BFC;
   │                   ^^^ Unused 'use' of alias 'BFC'. Consider removing it
   │
   = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E03004]: unbound type
   ┌─ /var/folders/9l/kfqd6hv17d1_8yxpd6zwys8m0000gn/T/.tmptAXjrl:20:33
   │
20 │     entry fun coin(_: &mut Coin<OBC>) {}
   │                                 ^^^ Unbound type 'OBC' in current scope



task 2 'programmable'. lines 27-29:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 3 'programmable'. lines 31-38:
Error: INVALID TEST. Unknown object, object(2,0)

task 4 'programmable'. lines 40-45:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }
